--- a/views/account.html
+++ b/views/account.html
@@ -47,7 +47,7 @@
                     <strong><a href="/faq#deposit">
                         <small>more?</small>
                     </a></strong>
-                    <img src="/img/deposit-warning.png" style="margin-top: 15px;" />
+                    <img src="/img/deposit-warning.png" style="margin-top: 15px; float: right" />
                 </div>
                 <br/>
 
