--- a/views/register.html
+++ b/views/register.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                         <div class="g-recaptcha" data-sitekey="6LdfOAYTAAAAAObF55v-yVI8kesqwIimDitHRsGU" data-callback="enableSubmit"></div>
-                        <input id="registerSubmit" style="display: none" class="button green" type="submit" value="Register" disabled="true"/>
+                        <input id="registerSubmit" style="display: none" class="button green right" type="submit" value="Register" disabled="true"/>
                         <p class="small" id="acceptTerms" style="display: block;">
                           You must accept the Terms &amp; Conditions before you can register.
                         </p>
