--- a/views/request.html
+++ b/views/request.html
@@ -40,7 +40,7 @@
                         <input type="hidden" name="recaptcha_response_field"
                                value="manual_challenge">
                     </noscript>
-                    <input class="right border-button red" type="submit" value="request"/>
+                    <input class="right button green" type="submit" value="request"/>
                 </form>
                 <script type="text/javascript"
                         src="https://www.google.com/recaptcha/api/challenge?k=6LdfOAYTAAAAAObF55v-yVI8kesqwIimDitHRsGU">
