--- a/views/table.html
+++ b/views/table.html
@@ -2,7 +2,7 @@
 
 {{##def.content:
     <div id="game" class="wrapper">
-        Game Loading...
+        <div class="loading">Game Loading...</div>
     </div>
     <!--Global vars-->
     <script>
