--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -92,3 +92,26 @@
     font-size: 14px;
     font-weight: bold;
 }
+
+.messages-container .header-bg {
+  background: #292d35 url("/img/header-bg.png");
+  height: 30px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+
+.messages-container .header-bg span {
+  padding: 0 10px;
+  height: 30px;
+  line-height: 30px;
+  color: #b0b3c1;
+  font-weight: 600;
+  text-transform: uppercase;
+  display: block;
+  font-size: 12px;
+}
+
