--- a/client/css/game.css
+++ b/client/css/game.css
@@ -85,11 +85,6 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-html,
-body,
-.wrapper {
-  min-width: 1100px;
-}
 body {
   -webkit-font-smoothing: antialiased;
   font: 14px "Verlag A", "Verlag B", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -214,13 +209,14 @@ textarea:focus {
   left: 0;
   bottom: 0;
   right: 0;
+  width: 380px;
 }
 .col-middle {
   position: absolute;
   top: 0;
-  left: 380px;
   bottom: 0;
-  right: 300px;
+  left: 380px;
+  right: 0;
 }
 .col-right {
   position: absolute;
