--- a/views/template/header.html
+++ b/views/template/header.html
@@ -68,6 +68,15 @@
           <li><a href="/register" class="button green">Register</a></li>
           <li><a href="/login" class="button">Login</a></li>
         </ul>
+        <div class="menu header-el">
+          <a href="/play">Play</a>
+          <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
+          <a href="/request">Faucet</a>
+          <a href="/weekly-leaderboard">Promotion</a>
+          <a href="/leaderboard">Leaderboard</a>
+          <a href="/stats">Stats</a>
+          <a href="/faq">FAQ</a>
+      </div>
       </nav>
     {{?}}
 </header>
