--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="row hero-unit">
-                <span style="text-align: center; font-size: 200%;">NXTBubble is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</span>
+                <span style="text-align: center; font-size: 200%;">ToTheMoon is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</span>
             </div>
 
             <div class="row features">
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="footer">
-                <p>NXTBubble.com</p>
+                <p>nxt.tothemoon.me</p>
                 <nav>
                     <ul>
                         <li><a href="/faq">FAQ</a></li>
