--- a/views/template/header.html
+++ b/views/template/header.html
@@ -60,7 +60,7 @@
       </div>
 
       {{?it.user.admin}}
-        <div><a class="username header-el button" href="/admin">admin</a></div>
+        <div><a class="username header-el button" href="/admin-giveaway">admin</a></div>
       {{?}}
     {{??}}
       <nav>
