--- a/views/faq.html
+++ b/views/faq.html
@@ -59,7 +59,7 @@
             <dd>
                 <b><a name="plugin"></a>How to play from the NXT plugin?</b>
                 <p>
-                    You can play NXTBubble directly from you NRS NXT client. Just click this link and follow the instructions: <br>
+                    You can play ToTheMoon directly from you NRS NXT client. Just click this link and follow the instructions: <br>
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-nxt-plugin-download-play-directly-in-nrs-1-5-x-clients/">Nxtforum.org thread</a>
                 </p>
             </dd>
@@ -146,7 +146,7 @@
                 <b><a name="last"></a>What is the bonus?</b>
                 <p>
                     The bonus is a special prize that is awarded to the last people to cash out before the game busted. Getting the bonus
-                    is critical to skillful playing of NXTBubble, as it is the <strong>only</strong> way to overcome house odds.
+                    is critical to skillful playing of ToTheMoon, as it is the <strong>only</strong> way to overcome house odds.
                 </p>
                 <p>1% of each player's stake goes into the bonus pot. So if there are 4 players, betting 400, 300, 200, and 100, there will be 10 NXT in the pot.
                     If the biggest player wins, he gets the whole pot. The site works out the rate he would be getting if he won, ie. 400 NXT bet gives 10 NXT bonus
@@ -239,7 +239,7 @@
                     Absolutely! And we can prove it. Please see:
                     <a href="https://nxtforum.org/nxtbubble-com/nxtbubble-com-provable-fair-seeding-event/">the nxtforum.org thread</a>
                     for technical details.<br>
-                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">NXTBubble Verifier</a>.
+                    If you just want a quick tool to verify the individual rolls, checkout this tool by user M19: <a href="http://m19.ninja/nxtbubble-verifier/">ToTheMoon Verifier</a>.
                 </p>
             </dd>
             <dd>
