--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -1,6 +1,6 @@
 .messages {
-  padding: 15px;
-  height: 100%;
+  height: 80vh;
+  padding-top: 15px;
 }
 
 .messages-container {
@@ -11,29 +11,43 @@
   border-right: 1px solid #292d35;
   border-left: 1px solid #292d35;
   overflow: hidden;
-  width: 365px;
+  height: 100%;
+  padding-bottom: 30px;
 }
 
 .messages-list {
     word-wrap: break-word;
-    display:inline-block;
+    display: inline-block;
     overflow-y: scroll;
-    width: 100%;
     font-size: 1rem;
     padding: 2px 3px;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+}
+
+@media only screen and (min-width: 64.063em) {
+  .messages {
+    height: 90vh;
+  }
+}
+
+@media only screen and (max-width: 64em) {
+  .messages {
+    height: 250px;
+  }
 }
 
 .chat-input {
   border: 0;
   color: black;
   background: #fff;
-  height: 26px;
   padding: 2px 2px 2px 10px;
   font-size: 13px;
   width: 100%;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-  padding-right: 70px;
+  height: 26px;
 }
 
 
@@ -101,8 +115,7 @@
   top: 0;
   right: 0;
   left: 0;
-  margin-left: 15px;
-  margin-top: 15px;
+  margin: 15px;
 }
 
 .messages-container .header-bg span {
