Add design switcher

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -57,6 +57,10 @@
           <a href="/leaderboard">Leaderboard</a>
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
+          <a href="https://nxt-old.tothemoon.me/play" style="
+            color: orange;
+            border: 2px solid grey;
+            padding: 5px;">Switch Design</a>
       </div>
 
       {{?it.user.admin}}
@@ -76,6 +80,10 @@
           <a href="/leaderboard">Leaderboard</a>
           <a href="/stats">Stats</a>
           <a href="/faq">FAQ</a>
+          <a href="https://nxt-old.tothemoon.me/play" style="
+            color: orange;
+            border: 2px solid grey;
+            padding: 5px;">Switch Design</a>          
       </div>
       </nav>
     {{?}}
