Add design switcher

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -24,6 +24,10 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ   </a>
+                <a href="https://nxt-old.tothemoon.me/play" style="
+                  color: orange;
+                  border: 2px solid grey;
+                  padding: 5px;">Switch Design</a>                
             {{??}}
                 <a href="/play">Play</a>
                 <a href="https://nxtforum.org/index.php?topic=9045.0" target="_blank">Invest</a>
@@ -31,6 +35,10 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
+                <a href="https://nxt-old.tothemoon.me/play" style="
+                  color: orange;
+                  border: 2px solid grey;
+                  padding: 5px;">Switch Design</a>                
                 <a href="/register">Register</a>
                 <a href="/login">Log in   </a>
             {{?}}
