--- a/views/template/header.html
+++ b/views/template/header.html
@@ -24,7 +24,7 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ   </a>
-                <a href="https://nxt-old.tothemoon.me/play" style="
+                <a href="https://nxt.tothemoon.me/play" style="
                   color: orange;
                   border: 2px solid grey;
                   padding: 5px;">Switch Design</a>                
@@ -35,7 +35,7 @@
                 <a href="/leaderboard">Leaderboard</a>
                 <a href="/stats">Stats</a>
                 <a href="/faq">FAQ</a>
-                <a href="https://nxt-old.tothemoon.me/play" style="
+                <a href="https://nxt.tothemoon.me/play" style="
                   color: orange;
                   border: 2px solid grey;
                   padding: 5px;">Switch Design</a>                
