--- a/views/template/header.html
+++ b/views/template/header.html
@@ -10,10 +10,10 @@
 <header class="header">
 <form action="/logout" method="post" id='logout'></form>
     <div class="logo">
-        <a href="/", title="NXTBubble">
+        <a href="/", title="ToTheMoon">
             <span class="coin"></span>
             <h1>
-                NXTBubble
+                ToTheMoon
             </h1>
         </a>
     </div>
