--- a/client/css/header.css
+++ b/client/css/header.css
@@ -82,7 +82,7 @@ h1.logo {
 }
 .balance:before {
   content: "";
-  background-image: url("/img/balance-nxt-icon.png");
+  background-image: url("/img/balance-icon.png");
   height: 36px;
   width: 36px;
   display: block;
@@ -92,7 +92,7 @@ h1.logo {
 }
 @media all and (-webkit-min-device-pixel-ratio: 1.5), (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 1.5/1), (min-device-pixel-ratio: 1.5), (min-resolution: 138dpi), (min-resolution: 1.5dppx) {
   .balance:before {
-    background-image: url("/img/balance-nxt-icon@2x.png");
+    background-image: url("/img/balance-icon@2x.png");
     -webkit-background-size: 36px 36px;
     -moz-background-size: 36px 36px;
     background-size: 36px 36px;
