--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
     <div class="index">
         <div class="i-content">
             <div class="row hero-unit">
-              <h1 class="title">Launch your NXT to the moon!</h1>
-              <h4 class="faucet">Receive <em>0.02 free NXT</em> per minute, so you can always play for fun and without commitment</h4>
+              <h1 class="title">Launch your {{#def.CURRENCY_FULL_NAME}} to the moon!</h1>
+              <h4 class="faucet">Receive <em>0.02 free {{#def.CURRENCY}}</em> per minute, so you can always play for fun and without commitment</h4>
               <a href="/play" class="cta">Play Now</a>
             </div>
 
@@ -17,7 +17,7 @@
                 <div class="stat"><span class="amount">{{=it.stats.plays.count }}</span><span class="stats-label">Total Bets</span></div>
               </div>
               <div class="large-4 column stat-wrapper">
-                <div class="stat"><span class="amount">{{#def.format: {n: (9 + it.stats.plays.cashed_out + it.stats.plays.bonused) } }} NXT</span><span class="stats-label">Total Won</span></div>
+                <div class="stat"><span class="amount">{{#def.format: {n: (9 + it.stats.plays.cashed_out + it.stats.plays.bonused)} }} {{#def.CURRENCY}}</span><span class="stats-label">Total Won</span></div>
               </div>
             </div>
 
