--- a/views/user.html
+++ b/views/user.html
@@ -24,16 +24,16 @@
             </div>
             <div class="columns data large-3">
                 <p>
-                    <b>Gross Profit </b>
-                        <strong><a href="/faq#gross-profit">?</a></strong>
+                    <b>Gross Profit <strong><a href="/faq#gross-profit">?</a></strong></b>
+                        
                 </p>
-                <h5>{{#def.format: { n: it.stats.gross_profit, decimals: 4} }} NXT</h5>
+                <h5>{{#def.format: { n: it.stats.gross_profit} }} {{#def.CURRENCY}}</h5>
             </div>
             <div class="columns data large-3">
                 <p>
                     <b>Net Profit</b>
                 </p>
-                <h5>{{#def.format: { n: it.stats.net_profit, decimals: 4} }} NXT</h5>
+                <h5>{{#def.format: { n: it.stats.net_profit} }} {{#def.CURRENCY}}</h5>
             </div>
         </div>
         <hr>
