First step to bitcoin deposits with block.io API

--- a/views/account.html
+++ b/views/account.html
@@ -27,16 +27,12 @@
                     <div class="panel radius">
                         <b>Deposit Address:</b>
                         <br/>
-                        <span>{{=it.user.deposit_address}}</span>
-                        <br/>
-                        <br/>
-                        <strong>You must attach an unencrypted message with only this number:
-                            <span style="color: black; font-size: 120%; background-color: lightgray"> {{=it.user.id}} </span> <span style="color: red;">*</span>
-                        </strong>
-
+                        {{?it.user.deposit_address}}
+                            <span>{{=it.user.deposit_address}}</span>
+                        {{??}}
+                            <a href="/create-deposit-address" class="button green">Create deposit address</a>
+                        {{?}}
                     </div>
-
-                    <strong style="color: red;">* If you fail to attach this message unencrypted, the deposit can't be added to your account. Be aware that after clicking the "Add message"-Checkbox, that you need to uncheck the "Encrypted Message"-Chechbox.</strong>
                 </div>
                 <div class="large-6 columns">
                     Transfer NXT, with the unique number attached <strong>unencrypted</strong>, to this address to have your account credited. Accounts
