--- a/views/index.html
+++ b/views/index.html
@@ -47,37 +47,8 @@
             <div class="row hero-unit">
                 <span style="text-align: center; font-size: 200%;">ToTheMoon is running a weekly promotion, check it out here: <a href="/weekly-leaderboard">Weekly Leaderboard</a>.</span>
             </div>
-
-            <div class="row features">
-                <div class="large-4 column">
-                    <div class="feature">
-                        <a href="https://github.com/TwinWinNerD/bustabit-gameserver" target="_blank">
-                          <img src="img/icons/github.png" alt=""/>
-                        </a>
-                        <p class="text">Source code by Bustabit.</p>
-                    </div>
-                </div>
-                <div class="large-4 column">
-                    <div class="feature">
-                        <a href="http://nxt.org/" target="_blank">
-                          <img src="img/icons/nxtinside.png" alt=""/>
-                        </a>
-                        <p class="text">Powered by NXT.</p>
-                    </div>
-                </div>
-                <div class="large-4 column">
-                    <div class="feature">
-                        <a href="http://nxtcs.com/" target="_blank" style="color: black;">
-                          <span style="font-size: 300%; font-weight: bold;">
-                            NXTCS
-                          </span>
-                        </a>
-                        <p class="text">Powered by NXTCS.</p>
-                    </div>
-                </div>
-            </div>
             <div class="footer">
-                <p>nxt.tothemoon.me</p>
+                <p>btc.tothemoon.me</p>
                 <nav>
                     <ul>
                         <li><a href="/faq">FAQ</a></li>
