--- a/views/register.html
+++ b/views/register.html
@@ -61,10 +61,10 @@
                         <label for="agree">I agree</label>
                     </input>
                     <p class="small">
-                    By accessing NXTBubble.com or its service:<br/>
+                    By accessing ToTheMoon.me or its service:<br/>
                     Acknowledge that you have read and agree to the website's <a href="/terms-conditions" target="_blank">Terms &amp; Conditions.</a> <br/>
                     Attest that you are 18 years old or older. <br/>
-                    Affirm that you are in a jurisdiction where the NXTBubble.com service is legal
+                    Affirm that you are in a jurisdiction where the ToTheMoon.me service is legal
                     </p>
                 </div>
                         <div class="g-recaptcha" data-sitekey="6LdfOAYTAAAAAObF55v-yVI8kesqwIimDitHRsGU" data-callback="enableSubmit"></div>
