--- a/views/deposit.html
+++ b/views/deposit.html
@@ -37,7 +37,7 @@
                     <table>
                         <thead>
                             <tr>
-                                <td>NXT</td>
+                                <td>{{#def.CURRENCY}}</td>
                                 <td>Transaction</td>
                                 <td class="show-for-medium-up">Created</td>
                             </tr>
@@ -45,8 +45,8 @@
                         <tbody>
                             {{~it.user.deposits :deposit:index}}
                                 <tr>
-                                    <td>{{#def.format: {n: deposit.amount, decimals: 4 } }}</td>
-                                    <td><a href="http://nxtportal.org/transactions/{{=deposit.txid}}" target="_blank">link</a></td>
+                                    <td>{{#def.format: {n: deposit.amount, decimals: 2 } }}</td>
+                                    <td><a href="https://blockchain.info/tx/{{=deposit.txid}}" target="_blank">link</a></td>
                                     <td class="show-for-medium-up">{{=deposit.created}}</td>
                                 </tr>
                             {{~}}
