--- a/views/withdraw_request.html
+++ b/views/withdraw_request.html
@@ -35,8 +35,8 @@
         <div class="panel">
             <h4>Request A Withdrawal</h4>
             <p class="small">
-                **The minimum amount for a withdrawal is 1 NXT. You will receive 1 NXT less than what you withdraw,
-                as we use that 1 NXT to go towards network fee.
+                **The minimum amount for a withdrawal is 200 {{#def.CURRENCY}}. You will receive 100 {{#def.CURRENCY}} less than what you withdraw,
+                as we use those 100 {{#def.CURRENCY}} to go towards network fee.
             </p>
 
             <p>
