--- a/views/account.html
+++ b/views/account.html
@@ -35,15 +35,10 @@
                     </div>
                 </div>
                 <div class="large-6 columns">
-                    Transfer NXT, with the unique number attached <strong>unencrypted</strong>, to this address to have your account credited. Accounts
-                    are only credited after <b>two NXT confirmations</b>
-                    which depending on external factors can take a while. You can check
-                    <a href="http://nxtportal.org/accounts/{{=it.user.deposit_address}}">nxtportal.org</a> to see if your
-                    transactions have confirmed yet. Deposits take two confirmations, so about four minutes.
+                    Transfer bitcoins to this address to have your account credited. Accounts are only credited after one bitcoin confirmation which depending on external factors can take a while. You can check <a href="https://blockchain.info/address/{{=it.user.deposit_address}}">blockchain.info</a> to see if your transactions have confirmed yet.
                     <strong><a href="/faq#deposit">
                         <small>more?</small>
                     </a></strong>
-                    <img src="/img/deposit-warning.png" style="margin-top: 15px; float: right" />
                 </div>
                 <br/>
 
@@ -59,7 +54,7 @@
                             <h5>{{#def.format:{n: it.user.withdrawals, decimals:2} }} {{#def.CURRENCY}}</h5>
                         </div>
                         <div class="columns data large-3">
-                            <p><b>Free NXT Collected </b></p>
+                            <p><b>Free {{#def.CURRENCY}} Collected </b></p>
                             <h5>{{#def.format:{n: it.user.giveaways, decimals:2} }} {{#def.CURRENCY}}</h5>
                         </div>
                         <div class="columns data large-3">
