--- a/views/request.html
+++ b/views/request.html
@@ -20,7 +20,7 @@
             </li>
         </ul>
         <div class="panel">
-            <h5>Request Free NXT</h5>
+            <h5>Request Free bits</h5>
             {{?typeof it.user.eligible !== 'number'}}
                 <p class="small ">**Every minute you are able to request 2 free {{#def.CURRENCY}}, just claim them!</p>
                 <form class="giveaway-form" action="/request" method="post">
